--- a/frontend/src/context/Modal.css
+++ b/frontend/src/context/Modal.css
@@ -22,16 +22,7 @@
 #modal-content {
   position: absolute;
   background-color:white;
-}
-
-.test {
-  width: 100px;
-  height: 100px;
-  background-color: black;
-  position: fixed;
-  z-index: 2;
-  top: 0;
-  right: 0;
-  left: 0;
-  bottom: 0;
+  border-radius: 12px;
+  width: 100%;
+  max-width: 568px;
 }
