--- a/frontend/src/components/Navigation/Navigation.css
+++ b/frontend/src/components/Navigation/Navigation.css
@@ -71,8 +71,13 @@ div.isHidden  {
 .nav-container {
   display: flex;
   justify-content: space-between;
+  position: sticky;
+  top: 0;
+  padding-left: 30px;
+  padding-right: 30px;
   padding-top: 10px;
   padding-bottom: 20px;
+  background-color: white;
   border-bottom: 1px solid rgb(220, 220, 220);
 }
 
