--- a/frontend/src/context/Modal.css
+++ b/frontend/src/context/Modal.css
@@ -26,3 +26,14 @@
   width: 100%;
   max-width: 568px;
 }
+
+.modal-form-wrapper {
+  padding: 20px;
+}
+
+.modal-form-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 10px;
+}
