--- a/frontend/src/components/SpotsDisplay/SpotsDisplay.css
+++ b/frontend/src/components/SpotsDisplay/SpotsDisplay.css
@@ -17,14 +17,23 @@
 
 .meta-data-holder {
   display: flex;
-  gap: 20px;
+  align-items: center;
+  gap: 10px;
 }
 
 .gallery-wrapper {
-  height: 300px;
+  display: flex;
   padding: 20px;
+}
+
+.current-spot-image{
   border-radius: 12px;
-  background-color: #E25959;
+  width: 100%;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: contain;
+  display: block;
+  overflow: hidden;
 }
 
 .description-wrapper {
@@ -42,4 +51,5 @@
   border: 1px solid #E25959;
   border-radius: 12px;
   padding: 15px;
+  margin-top: 10px;
 }
