--- a/frontend/src/components/SpotsPage/Spots.css
+++ b/frontend/src/components/SpotsPage/Spots.css
@@ -3,37 +3,36 @@
 }
 
 .grid-container {
-  display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
-  grid-gap: 30px;
-  grid-auto-rows: 300px;
-  border-radius: 10px;
+  display: flex;
+  justify-content: space-between;
+  position: relative;
+  flex-direction: row;
+  flex-wrap: wrap;
 }
 
 .grid-item {
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  background-color: rgb(240, 240, 240);
   border-radius: 10px;
   padding: 10px;
+  width: 300px;
 }
 
 .spot-descriptions-grid {
   display: grid;
   grid-template-columns: repeat(2, 1fr);
   grid-template-rows: 2.0em;
-  gap: 10px;
+  grid-gap: 0;
   color: black;
-}
-
-.description-items {
-
+  padding: 3px;
+  margin-top: 5px;
 }
 
 .description-item-1 {
-  grid-column: 1;
+  grid-column: 1 / 3;
   grid-row: 1;
+
 }
 
 .description-item-2 {
@@ -43,6 +42,21 @@
 
 .description-item-3 {
   grid-column: 2;
-  grid-row: 1;
+  grid-row: 2;
   text-align: end;
+}
+
+.main-image-wrapper {
+
+}
+
+.main-page-spot-images {
+  border-radius: 12px;
+  width: 100%;
+  height: 15rem;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size:contain;
+  display: block;
+  overflow: hidden;
 }
