--- a/frontend/src/components/SpotsDisplay/SpotsDisplay.css
+++ b/frontend/src/components/SpotsDisplay/SpotsDisplay.css
@@ -12,7 +12,6 @@
 }
 
 .spot-title {
-  margin: 5px;
 }
 
 .meta-data-holder {
@@ -24,11 +23,11 @@
 .gallery-wrapper {
   display: flex;
   padding: 20px;
+  max-height: 500px;
 }
 
 .current-spot-image{
   border-radius: 12px;
-  width: 100%;
   background-position: center;
   background-repeat: no-repeat;
   background-size: contain;
@@ -37,7 +36,7 @@
 }
 
 .description-wrapper {
-  padding: 20px;
+
 }
 
 
