--- a/frontend/src/components/Navigation/Navigation.css
+++ b/frontend/src/components/Navigation/Navigation.css
@@ -120,3 +120,9 @@ a {
   text-decoration: none;
   color: black;
 }
+
+.logo-container-about {
+  display: flex;
+  flex-direction: row-reverse;
+  gap: 10px;
+}
